--- a/app/locale/i18n_zh.json
+++ b/app/locale/i18n_zh.json
@@ -1,5 +1,5 @@
 {
-    "app_name": "video_getter",
+    "app_name": "flutter_quick_start",
     "about": "关于",
     "ok": "OK",
     "refresh": "刷新",
