--- a/app/locale/i18n_en.json
+++ b/app/locale/i18n_en.json
@@ -1,5 +1,5 @@
 {
-    "app_name": "flutter_quick_start",
+    "app_name": "video_getter",
     "about": "About",
     "ok": "OK",
     "refresh": "Refresh",
