--- a/app/locale/i18n_zh.json
+++ b/app/locale/i18n_zh.json
@@ -1,9 +1,13 @@
 {
-    "app_name": "video_getter",
-    "about": "关于",
-    "ok": "OK",
-    "refresh": "刷新",
-    "copy_link": "复制链接",
-    "copied": "已复制",
-    "loading": "加载中..."
+  "app_name": "video_getter",
+  "about": "关于",
+  "ok": "OK",
+  "refresh": "刷新",
+  "copy_link": "复制链接",
+  "copied": "已复制",
+  "loading": "加载中...",
+  "input_url_tip": "请输入链接",
+  "paste": "粘贴",
+  "download": "下载",
+  "error_url": "链接有误"
 }
